# monero-ots-ur-qt

./: CMakeLists.txt  README.md  qml.qrc
components/: CMakeLists.txt  QrDisplayComponent.qml  UrDisplayComponent.qml  UrScanComponent.qml
display/: .URWidget.h.swp  CMakeLists.txt  QrWidget.cpp  QrWidget.h  UrSettingsDialog.cpp  UrSettingsDialog.h  UrSettingsDialog.ui  UrWidget.cpp  UrWidget.h  UrWidget.ui
framestate/: CMakeLists.txt  FrameState.cpp  FrameState.h
monerodata/: MoneroData.cpp  MoneroData.h  MoneroTxData.h  MoneroWalletData.h
qrcode/: CMakeLists.txt
qtquick/: CMakeLists.txt  UrCodeScanner.cpp  UrCodeScanner.h  UrImageProvider.cpp  UrReceiver.cpp  UrReceiver.h  UrRegister.cpp  UrRegister.h  UrSender.cpp  UrSender.h
scan/: CMakeLists.txt  InfoFrame.cpp  InfoFrame.h  ScanThread.cpp  ScanWidget.cpp  ScanWidget.h  ScanWidget.ui
uri/: CMakeLists.txt  MoneroUri.cpp  MoneroUri.h  MoneroWalletData.h
